fix: Use display:none to hide the toast so it won't eat mouseclicks
at certain window sizes this overlaps with the login button, yikes!

--- a/apps/juxtaposition-ui/src/webfiles/web/css/login.css
+++ b/apps/juxtaposition-ui/src/webfiles/web/css/login.css
@@ -155,7 +155,7 @@ form.account.register div:last-child {
 }
 
 #toast {
-    opacity: 0;
+    display: none;
 	min-width: 250px;
 	background-color: #A9375B;
 	color: var(--text);
@@ -173,5 +173,5 @@ form.account.register div:last-child {
 }
 
 #toast.show {
-    opacity: 1;
+    display: block;
 }
